test/errors/template.005.tmpl
## This is OK and parsed as a string literal
<TMPL_VAR EXPR="$a && b">
<TMPL_VAR [% $a && b %]>
